WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170015
[GTK] Various build errors when plugin support is disabled
https://bugs.webkit.org/show_bug.cgi?id=170015
Summary
[GTK] Various build errors when plugin support is disabled
ManDay
Reported
2017-03-23 11:48:07 PDT
Created
attachment 305208
[details]
stderr by make The attached errors are produced during compilation
Attachments
stderr by make
(1.43 KB, text/plain)
2017-03-23 11:48 PDT
,
ManDay
no flags
Details
Patch
(2.09 KB, patch)
2017-03-23 12:55 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch
(3.07 KB, patch)
2017-03-23 12:57 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch
(4.79 KB, patch)
2017-03-24 06:05 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Error on linkage
(3.77 KB, text/plain)
2017-03-28 04:29 PDT
,
ManDay
no flags
Details
Patch
(5.99 KB, patch)
2017-03-28 06:33 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Errors with newest patch
(4.22 KB, text/plain)
2017-03-28 11:14 PDT
,
ManDay
no flags
Details
Patch
(6.28 KB, patch)
2017-04-07 10:49 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-03-23 12:54:15 PDT
I guess you're building with -DENABLE_X11_TARGET=OFF? That disables ENABLE_NETSCAPE_PLUGIN_API and causes this failure. Here's an untested fix; let me know if it works.
Michael Catanzaro
Comment 2
2017-03-23 12:55:01 PDT
Created
attachment 305215
[details]
Patch
Build Bot
Comment 3
2017-03-23 12:57:22 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 4
2017-03-23 12:57:23 PDT
Created
attachment 305216
[details]
Patch
Michael Catanzaro
Comment 5
2017-03-23 12:58:07 PDT
Also Carlos, is it really right for ENABLE_NETSCAPE_PLUGIN_API to depend on ENABLE_X11_TARGET? I think it's not, because you spent a lot of effort making windowless plugins work on Wayland.
Carlos Garcia Campos
Comment 6
2017-03-24 00:31:48 PDT
(In reply to Michael Catanzaro from
comment #5
)
> Also Carlos, is it really right for ENABLE_NETSCAPE_PLUGIN_API to depend on > ENABLE_X11_TARGET? I think it's not, because you spent a lot of effort > making windowless plugins work on Wayland.
Probably not.
Michael Catanzaro
Comment 7
2017-03-24 06:05:56 PDT
Created
attachment 305277
[details]
Patch
Michael Catanzaro
Comment 8
2017-03-24 06:06:14 PDT
(Please approve the new version.)
ManDay
Comment 9
2017-03-28 04:28:35 PDT
I still get the following error on linkage, which I suppose is related: PluginControllerProxy.cpp:(.text+0x100): undefined reference to 'WebKit::PluginControllerProxy::platformDestroy()'
ManDay
Comment 10
2017-03-28 04:29:01 PDT
Created
attachment 305585
[details]
Error on linkage
Michael Catanzaro
Comment 11
2017-03-28 06:33:50 PDT
Created
attachment 305589
[details]
Patch
Michael Catanzaro
Comment 12
2017-03-28 06:34:04 PDT
Please test it again.
ManDay
Comment 13
2017-03-28 11:14:39 PDT
Created
attachment 305611
[details]
Errors with newest patch
Michael Catanzaro
Comment 14
2017-04-07 10:49:27 PDT
Created
attachment 306515
[details]
Patch
Michael Catanzaro
Comment 15
2017-04-07 10:49:52 PDT
Tested my patch with -DENABLE_X11_TARGET=OFF and it worked for me, but here's another attempt.
WebKit Commit Bot
Comment 16
2017-04-07 11:53:02 PDT
Comment on
attachment 306515
[details]
Patch Clearing flags on attachment: 306515 Committed
r215106
: <
http://trac.webkit.org/changeset/215106
>
WebKit Commit Bot
Comment 17
2017-04-07 11:53:04 PDT
All reviewed patches have been landed. Closing bug.
ManDay
Comment 18
2017-04-08 03:10:42 PDT
For the record: With the newest patch it works here, too.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug